Update RoomResource.java