@@ -4,40 +4,50 @@ import com.smartcampus.exception.ResourceNotFoundException;
 import com.smartcampus.exception.RoomNotEmptyException;
 import com.smartcampus.model.Room;
 import com.smartcampus.store.DataStore;
-import javax.ws.rs.*;
+import javax.ws.rs.Consumes;
+import javax.ws.rs.DELETE;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import java.net.URI;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
-@Path("/rooms")
-@Produces(MediaType.APPLICATION_JSON)
-@Consumes(MediaType.APPLICATION_JSON)
+@Path("rooms")
 public class RoomResource {
 
     private final DataStore store = DataStore.getInstance();
 
     @GET
+    @Produces(MediaType.APPLICATION_JSON)
     public Response getAllRooms() {
         List<Room> roomList = new ArrayList<>(store.getRooms().values());
         return Response.ok(roomList).build();
     }
 
     @POST
+    @Produces(MediaType.APPLICATION_JSON)
+    @Consumes(MediaType.APPLICATION_JSON)
     public Response createRoom(Room room) {
-        if (room.getId() == null || room.getId().isBlank()) {
+        if (room.getId() == null || room.getId().trim().isEmpty()) {
             Map<String, Object> err = new LinkedHashMap<>();
             err.put("status", 400);
             err.put("error", "Bad Request");
             err.put("message", "Room 'id' is required.");
-            return Response.status(Response.Status.BAD_REQUEST).entity(err).build();
+            return Response.status(400).entity(err).build();
         }
         if (store.getRoom(room.getId()) != null) {
             Map<String, Object> err = new LinkedHashMap<>();
             err.put("status", 409);
             err.put("error", "Conflict");
             err.put("message", "Room '" + room.getId() + "' already exists.");
-            return Response.status(Response.Status.CONFLICT).entity(err).build();
+            return Response.status(409).entity(err).build();
         }
         if (room.getSensorIds() == null) {
             room.setSensorIds(new ArrayList<>());
@@ -50,7 +60,8 @@ public class RoomResource {
     }
 
     @GET
-    @Path("/{roomId}")
+    @Path("{roomId}")
+    @Produces(MediaType.APPLICATION_JSON)
     public Response getRoom(@PathParam("roomId") String roomId) {
         Room room = store.getRoom(roomId);
         if (room == null) {
@@ -60,7 +71,8 @@ public class RoomResource {
     }
 
     @DELETE
-    @Path("/{roomId}")
+    @Path("{roomId}")
+    @Produces(MediaType.APPLICATION_JSON)
     public Response deleteRoom(@PathParam("roomId") String roomId) {
         Room room = store.getRoom(roomId);
         if (room == null) {
